2016-09-22  Edward Jones  <ed.jones@embecosm.com.

	* Driver.cpp: Use getFeatureGroupFeatures instead of getFeatures.

2016-09-21  Edward Jones  <ed.jones@embecosm.com>

	* Driver.cpp: Pass the command used to compile modules and
	functions to Database::newCompilation.

2016-09-21  Edward Jones  <ed.jones@embecosm.com>

	* Driver.cpp: Generate compilation ids for functions as well as
	modules.

2016-09-19  Edward Jones  <ed.jones@embecosm.com>

	* Driver.cpp: Use -mageec-gcc to replace the original command word

2016-09-19  Edward Jones  <ed.jones@embecosm.com>

	* Driver.cpp: Remove -mageec-config option, and add
	-mageec-features and -mageec-out options.

2016-09-19  Edward Jones  <ed.jones@embecosm.com>

	* Driver.cpp: Add -mageec-gcc option to specify the command to
	invoke gcc.

2016-09-19  Edward Jones  <ed.jones@embecosm.com>

	* Driver.cpp: Refactor. Add ability to optimize using a selected
	machine learner.

2016-08-23  Edward Jones  <ed.jones@embecosm.com>

	* Driver.cpp: Reimplement driver so that it's interface matches
	that of gcc

2016-08-16  Edward Jones  <ed.jones@embecosm.com>

	* CMakeLists.txt: Rename gcc_driver target executable to mageec-gcc

2016-08-16  Edward Jones  <ed.jones@embecosm.com>

	* Driver.cpp: Add 'gather' functionality to the driver

2016-08-15  Edward Jones  <ed.jones@embecosm.com>

	Added a GCC wrapper driver

	* AUTHORS: Added file.
	* CMakeLists.txt: Likewise.
	* COPYING: Likewise.
	* Driver.cpp: Likewise.
	* Parameters.h: Likewise.
	* README: Likewise.